resilio/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resilio
  labels:
    app.kubernetes.io/name: resilio
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: resilio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: resilio
    spec:
      containers:
      - name: resilio
        image: resilio/sync
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        - containerPort: 55555
          name: rslsync-udp
          protocol: UDP
        - containerPort: 55555
          name: rslsync-tcp
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          limits: {}
#            cpu: 1000m
#            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 300Mi
        volumeMounts:
        - mountPath: /mnt/sync
          name: sync-db
        - mountPath: /data/media
          name: media
        - mountPath: /data/veeam
          name: veeam
      volumes:
      - name: config
        configMap:
          name: resilio-config
      - name: sync-db
        persistentVolumeClaim:
          claimName: resilio-sync-db
      - name: media
        persistentVolumeClaim:
          claimName: media-share-sync
      - name: veeam
        persistentVolumeClaim:
          claimName: resilio-veeam
