resilio/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resilio-ui
  labels:
    app.kubernetes.io/name: resilio
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: resilio
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: resilio-lb
  labels:
    app.kubernetes.io/name: resilio
spec:
  ports:
  - name: rslsync-tcp
    port: 55555
    protocol: TCP
  - name: rslsync-udp
    port: 55555
    protocol: UDP
  selector:
    app.kubernetes.io/name: resilio
  type: LoadBalancer
